--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "debug": "~2.6.9",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
     "luxon": "^3.4.4",
     "morgan": "~1.9.1",
