--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "debug": "~2.6.9",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
