--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
     "luxon": "^3.4.4",
-    "morgan": "~1.9.1",
-    "pug": "^3.0.2"
+    "morgan": "~1.9.1"
   }
 }
