--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
     "luxon": "^3.4.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^8.12.0"
   }
 }
